syntax = "proto3";

package etherstate.etherstate;

option go_package = "github.com/nelsonstr/o3n1/ether-state/x/etherstate/types";

// Msg defines the Msg service.
service Msg {
  rpc EnableEthAddress  (MsgEnableEthAddress ) returns (MsgEnableEthAddressResponse );
  rpc DisableEthAddress (MsgDisableEthAddress) returns (MsgDisableEthAddressResponse);
}
message MsgEnableEthAddress {
  string creator = 1;
  string address = 2;
}

message MsgEnableEthAddressResponse {
  bool success = 1;
}

message MsgDisableEthAddress {
  string creator = 1;
  string address = 2;
}

message MsgDisableEthAddressResponse {
  bool success = 1;
}

