syntax = "proto3";
package statether.statether;

option go_package = "github.com/nelsonstr/o3n1/statether/x/statether/types";

message Statether {
  string index = 1; 
  string ethAddress = 2; 
  uint64 block = 3; 
  uint64 nonce = 4; 
  uint64 storagePosition = 5; 
  bool active = 6; 
  
}

